fix: horizontal scroll → front

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -14,13 +14,13 @@
   fill: #4583FF;
 }
 
-/* HorizontalScroll */
-.react-horizontal-scrolling-menu--item {
-  display: inline-table;
-}
-
 /* Home : Carousel Slide */
 .react-swipeable-view-container {
+  overflow-x: visible;
+}
+
+/* Swipe : Mobile Style */
+.swiper-wrapper {
   overflow-x: visible;
 }
 
